--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
+    "@vercel/node": "^1.9.1",
+    "axios": "^0.21.4",
+    "dotenv": "^14.2.0",
     "next": "13.2.4",
+    "node-fetch": "^2.6.9",
+    "querystring": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^2.6.3"
   }
 }
